--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,7 +28,10 @@ jobs:
     #   - https://gh.io/supported-runners-and-hardware-resources
     #   - https://gh.io/using-larger-runners
     # Consider using larger runners for possible analysis time improvements.
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+    runs-on: 
+$ echo "67c1accb9cdc2138fc797d379c295896c01c8f5f4240e7e674f99a492bd1c668  actions-runner-osx-arm64-2.309.0.tar.gz" | shasum -a 256 -c
+# Extract the installer
+$ tar xzf ./actions-runner-osx-arm64-2.309.0.tar.gz ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
     permissions:
       actions: read
@@ -81,7 +84,6 @@ jobs:
       with:
         category: "/language:${{matrix.language}}"
 See LICENSE folder for this sample’s licensing information.
-
 Abstract:
 Implementation of vector, matrix, and quaternion math utility functions useful for 3D graphics
  rendering with Metal
